
=item *

Fixed the typo "Distribintion" in the side navigation. Thanks to Christian
Niles for the spot. [David]

=item *

Added installation defaults for FreeBSD that will be used when the
C<USE_DEFAULTS> environment variable is set to "freebsd" during installation.
[Rod Taylor]

=item *

Fixed some errors in and rearragned the SOAP schema in
L<Bric::SOAP|Bric::SOAP>. [Christian Niles]

=back

=head2 Bug Fixes

=over

=item *

Fixed localization errors such as, "Can't use "for Published" as a method name
in bracket group," which appeard in searches and on desks. Thanks to Guido
Bülskämper for the spot! [David]

=item *

Fixed some of the 1.8.9 upgrade scripts that run I<after> the 1.9.x upgrade
scripts to that they are properly compatible. [Nate Perry-Thistle and David]

=back

=head1 VERSION 1.10.0 (2006-01-23)

=head2 Improvements

=over

=item *

Eliminated letter graphics for "Published" and "Deployed" labels in story,
media, and template managers in favor of localizable characters. [David]

=item *

Moved the C<display_pages()> method from subclasses to
L<Bric::Util::Burner|Bric::Util::Burner>. Each subclass must implement a
C<display_element()> method for it to work; this means that it works for all
current burners except the HTML::Template burner, which manages pages
differently. This also fixed pagination issues in the Template Toolkit and PHP
burners. [David]

=item *

Completely updated L<Bric::Templates|Bric::Templates> and
L<Bric::AdvTemplates|Bric::AdvTemplates>, with expanded API documentation and
examples in Mason, Template Toolkit, and PHP. [David]

=item *

Refactored the left navigation code to perform better and be easier to
maintain. It now also sorts the admin menu items in alphabetical order by the
localized name of each. [David]

=item *

Updated the UI to fix Internet Explorer glitches. [Marshall]

=item *

The Element Type profile is now much smarter about displaying site